testsuite/tests/patsyn/should_fail/patsyn_where_fail2.hs
{-# LANGUAGE PatternSynonyms #-}

module PatSynWhereFail2 where

pattern P x <- x:xs where
  Just x = [x]
