testsuite/tests/patsyn/should_fail/patsyn_where_fail2.stderr
patsyn_where_fail2.hs:6:3: error: [GHC-24737]
    Pattern synonym 'where' clause must bind the pattern synonym's name ‘P’
    Just x = [x]

